Fixed Base64 compiler error